Fix style for exercices list on mobile

--- a/assets/scss/pages/_general.scss
+++ b/assets/scss/pages/_general.scss
@@ -7,5 +7,6 @@
 footer{
   img{
     width: 10vw;
+    min-width: 10vh;
   }
 }
